<resources>
    <string name="app_name">Made Mov Final</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Movie App</string>
    <string name="nav_header_subtitle">donnipra.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="err_load_failed">Failed to load data.\nPlease check your Internet connections!</string>


    <string name="label_now_playing">Now Playing</string>
    <string name="label_upcoming">Upcoming</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_setting">Setting</string>
    <string name="label_language">Language</string>

    <string name="label_detail">Detail</string>
    <string name="label_share">Share</string>

    <string name="label_keyword">Keyword</string>
    <string name="label_search">Search</string>

    <string name="cv_save">You like this movie</string>
    <string name="cv_remove">This movie has been removed from favorite list!</string>
    <string name="cv_coming_soon">Coming Soon</string>

    <string name="label_overview">Overview</string>
    <string name="label_popularity">Popularity</string>
    <string name="label_release_date">Release Date</string>
    <string name="appwidget_text">Favorite Movie</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">No Data in Favorite</string>

    <string name="action_notification">Notification</string>
    <string name="key_reminder_daily">reminder_daily</string>
    <string name="key_reminder_upcoming">reminder_upcoming</string>

    <string name="label_daily_reminder">Daily Reminder Notification is now</string>
    <string name="label_upcoming_reminder">Upcoming Reminder Notification is now</string>
    <string name="label_activated">activated!</string>
    <string name="label_deactivated">deactivated!</string>

    <string name="label_daily_reminder_title">Daily Reminder Notification</string>
    <string name="label_daily_reminder_summary">Turn on/off daily reminder</string>

    <string name="label_upcoming_reminder_title">Upcoming Reminder Notification</string>
    <string name="label_upcoming_reminder_summary">Turn on/off upcoming reminder</string>

    <string name="label_alarm_daily_reminder">Hello, Do you want to see new movie today?</string>

</resources>
