<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_now_playing"
            android:icon="@drawable/ic_play_circle_filled_black"
            android:title="@string/label_now_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_local_movies_black"
            android:title="@string/label_upcoming" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_black"
            android:title="@string/label_favorite"
            />
    </group>

    <item android:title="@string/label_setting">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/label_setting" />
            <item
                android:id="@+id/nav_language"
                android:icon="@drawable/ic_language_black"
                android:title="@string/label_language" />
        </menu>
    </item>

</menu>
